--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -59,7 +59,7 @@
         <p>
           <a class="btn" href="/pages/register">Register for an account</a>
         </p>
-<!--         <a href="{{ shop.url }}">{{ 'customer.login.cancel' | t }}</a> -->
+<!--         <a href="/">{{ 'customer.login.cancel' | t }}</a> -->
 
       {% endform %}
     </div>
